# rust-test

./: Cargo.toml  log.txt
examples/: test0.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
src/: ast0.rs  ast1.rs  ast2.rs  env.rs  eval.rs  lam.pest  main.rs  names.rs  parse.rs  trans01.rs  trans02.rs
