[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
im-rc = { version = "15.1.0" }
immutable-chunkmap = { path = "immutable-chunkmap" }
pest = "2.7.9"
pest_derive = "2.7.9"
lazy_static = "1.4.0"
bumpalo = "3.16.0"