[package]
name = "rust-test"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
overflow-checks = false
opt-level = 3

[profile.release]
overflow-checks = false
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true

[dependencies]
mimalloc = "0.1.42"
pest = "2.7.9"
pest_derive = "2.7.9"
lazy_static = "1.4.0"
ahash = "0.8.11"
derivative = "2.2.0"
rpds = "1.1.1"
archery = "1.2.1"
gc = { version ="0.5.0", features = ["derive"] }
